tests/bom/bom.exp
Error: FormData.js:5
  5: new FormData(''); // incorrect
                  ^^ string. This type is incompatible with the expected param type of
322:     constructor(form?: HTMLFormElement): void;
                            ^^^^^^^^^^^^^^^ HTMLFormElement. See lib: <BUILTINS>/bom.js:322

Error: FormData.js:6
  6: new FormData(document.createElement('input')); // incorrect
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ HTMLInputElement. This type is incompatible with the expected param type of
322:     constructor(form?: HTMLFormElement): void;
                            ^^^^^^^^^^^^^^^ HTMLFormElement. See lib: <BUILTINS>/bom.js:322

Error: FormData.js:14
 14: const d: string = a.get('foo'); // incorrect
                       ^^^^^^^^^^^^ File. This type is incompatible with
 14: const d: string = a.get('foo'); // incorrect
              ^^^^^^ string

Error: FormData.js:14
 14: const d: string = a.get('foo'); // incorrect
                       ^^^^^^^^^^^^ null. This type is incompatible with
 14: const d: string = a.get('foo'); // incorrect
              ^^^^^^ string

Error: FormData.js:14
 14: const d: string = a.get('foo'); // incorrect
                       ^^^^^^^^^^^^ undefined. This type is incompatible with
 14: const d: string = a.get('foo'); // incorrect
              ^^^^^^ string

Error: FormData.js:15
 15: const e: Blob = a.get('foo'); // incorrect
                     ^^^^^^^^^^^^ null. This type is incompatible with
 15: const e: Blob = a.get('foo'); // incorrect
              ^^^^ Blob

Error: FormData.js:15
 15: const e: Blob = a.get('foo'); // incorrect
                     ^^^^^^^^^^^^ string. This type is incompatible with
 15: const e: Blob = a.get('foo'); // incorrect
              ^^^^ Blob

Error: FormData.js:15
 15: const e: Blob = a.get('foo'); // incorrect
                     ^^^^^^^^^^^^ undefined. This type is incompatible with
 15: const e: Blob = a.get('foo'); // incorrect
              ^^^^ Blob

Error: FormData.js:17
 17: a.get(2); // incorrect
           ^ number. This type is incompatible with the expected param type of
325:     get(name: string): ?FormDataEntryValue;
                   ^^^^^^ string. See lib: <BUILTINS>/bom.js:325

Error: FormData.js:21
 21: const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
                                               ^^^^^^^^^^^^^^^ array type. Has some incompatible type argument with
 21: const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array type
  Type argument `T` is incompatible:
     21: const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
                                         ^^^^^^ number. This type is incompatible with
    326:     getAll(name: string): Array<FormDataEntryValue>;
                                         ^^^^^^^^^^^^^^^^^^ union: string | File. See lib: <BUILTINS>/bom.js:326
      Member 1:
      319: type FormDataEntryValue = string | File
                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
      Error:
       21: const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
                                           ^^^^^^ number. This type is incompatible with
      319: type FormDataEntryValue = string | File
                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
      Member 2:
      319: type FormDataEntryValue = string | File
                                              ^^^^ File. See lib: <BUILTINS>/bom.js:319
      Error:
       21: const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
                                           ^^^^^^ number. This type is incompatible with
      319: type FormDataEntryValue = string | File
                                              ^^^^ File. See lib: <BUILTINS>/bom.js:319

Error: FormData.js:22
 22: const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
                                             ^^^^^^^^^^^^^^^ array type. Has some incompatible type argument with
 22: const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ array type
  Type argument `T` is incompatible:
     22: const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
                                  ^^^^ Blob. This type is incompatible with
    326:     getAll(name: string): Array<FormDataEntryValue>;
                                         ^^^^^^^^^^^^^^^^^^ union: string | File. See lib: <BUILTINS>/bom.js:326
      Member 1:
      319: type FormDataEntryValue = string | File
                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
      Error:
       22: const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
                                    ^^^^ Blob. This type is incompatible with
      319: type FormDataEntryValue = string | File
                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
      Member 2:
      319: type FormDataEntryValue = string | File
                                              ^^^^ File. See lib: <BUILTINS>/bom.js:319
      Error:
       22: const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
                                    ^^^^ Blob. This type is incompatible with
      319: type FormDataEntryValue = string | File
                                              ^^^^ File. See lib: <BUILTINS>/bom.js:319

Error: FormData.js:23
 23: a.getAll(23); // incorrect
              ^^ number. This type is incompatible with the expected param type of
326:     getAll(name: string): Array<FormDataEntryValue>;
                      ^^^^^^ string. See lib: <BUILTINS>/bom.js:326

Error: FormData.js:27
 27: a.set('foo', {}); // incorrect
     ^^^^^^^^^^^^^^^^ call of method `set`. Function cannot be called on any member of intersection type
 27: a.set('foo', {}); // incorrect
     ^^^^^ intersection
  Member 1:
  328:     set(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:328
  Error:
   27: a.set('foo', {}); // incorrect
                    ^^ object literal. This type is incompatible with the expected param type of
  328:     set(name: string, value: string): void;
                                    ^^^^^^ string. See lib: <BUILTINS>/bom.js:328
  Member 2:
  329:     set(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:329
  Error:
   27: a.set('foo', {}); // incorrect
                    ^^ object literal. This type is incompatible with the expected param type of
  329:     set(name: string, value: Blob, filename?: string): void;
                                    ^^^^ Blob. See lib: <BUILTINS>/bom.js:329
  Member 3:
  330:     set(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:330
  Error:
   27: a.set('foo', {}); // incorrect
                    ^^ object literal. This type is incompatible with the expected param type of
  330:     set(name: string, value: File, filename?: string): void;
                                    ^^^^ File. See lib: <BUILTINS>/bom.js:330

Error: FormData.js:28
 28: a.set(2, 'bar'); // incorrect
     ^^^^^^^^^^^^^^^ call of method `set`. Function cannot be called on any member of intersection type
 28: a.set(2, 'bar'); // incorrect
     ^^^^^ intersection
  Member 1:
  328:     set(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:328
  Error:
   28: a.set(2, 'bar'); // incorrect
             ^ number. This type is incompatible with the expected param type of
  328:     set(name: string, value: string): void;
                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:328
  Member 2:
  329:     set(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:329
  Error:
   28: a.set(2, 'bar'); // incorrect
             ^ number. This type is incompatible with the expected param type of
  329:     set(name: string, value: Blob, filename?: string): void;
                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:329
  Member 3:
  330:     set(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:330
  Error:
   28: a.set(2, 'bar'); // incorrect
             ^ number. This type is incompatible with the expected param type of
  330:     set(name: string, value: File, filename?: string): void;
                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:330

Error: FormData.js:29
 29: a.set('foo', 'bar', 'baz'); // incorrect
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `set`. Function cannot be called on any member of intersection type
 29: a.set('foo', 'bar', 'baz'); // incorrect
     ^^^^^ intersection
  Member 1:
  328:     set(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:328
  Error:
   29: a.set('foo', 'bar', 'baz'); // incorrect
                           ^^^^^ unused function argument
    328:     set(name: string, value: string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 2 arguments. See lib: <BUILTINS>/bom.js:328
  Member 2:
  329:     set(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:329
  Error:
   29: a.set('foo', 'bar', 'baz'); // incorrect
                    ^^^^^ string. This type is incompatible with the expected param type of
  329:     set(name: string, value: Blob, filename?: string): void;
                                    ^^^^ Blob. See lib: <BUILTINS>/bom.js:329
  Member 3:
  330:     set(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:330
  Error:
   29: a.set('foo', 'bar', 'baz'); // incorrect
                    ^^^^^ string. This type is incompatible with the expected param type of
  330:     set(name: string, value: File, filename?: string): void;
                                    ^^^^ File. See lib: <BUILTINS>/bom.js:330

Error: FormData.js:32
 32: a.set('bar', new File([], 'q'), 2) // incorrect
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `set`. Function cannot be called on any member of intersection type
 32: a.set('bar', new File([], 'q'), 2) // incorrect
     ^^^^^ intersection
  Member 1:
  328:     set(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:328
  Error:
   32: a.set('bar', new File([], 'q'), 2) // incorrect
                    ^^^^^^^^^^^^^^^^^ File. This type is incompatible with the expected param type of
  328:     set(name: string, value: string): void;
                                    ^^^^^^ string. See lib: <BUILTINS>/bom.js:328
  Member 2:
  329:     set(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:329
  Error:
   32: a.set('bar', new File([], 'q'), 2) // incorrect
                                       ^ number. This type is incompatible with the expected param type of
  329:     set(name: string, value: Blob, filename?: string): void;
                                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:329
  Member 3:
  330:     set(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:330
  Error:
   32: a.set('bar', new File([], 'q'), 2) // incorrect
                                       ^ number. This type is incompatible with the expected param type of
  330:     set(name: string, value: File, filename?: string): void;
                                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:330

Error: FormData.js:35
 35: a.set('bar', new Blob, 2) // incorrect
     ^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `set`. Function cannot be called on any member of intersection type
 35: a.set('bar', new Blob, 2) // incorrect
     ^^^^^ intersection
  Member 1:
  328:     set(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:328
  Error:
   35: a.set('bar', new Blob, 2) // incorrect
                    ^^^^^^^^ Blob. This type is incompatible with the expected param type of
  328:     set(name: string, value: string): void;
                                    ^^^^^^ string. See lib: <BUILTINS>/bom.js:328
  Member 2:
  329:     set(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:329
  Error:
   35: a.set('bar', new Blob, 2) // incorrect
                              ^ number. This type is incompatible with the expected param type of
  329:     set(name: string, value: Blob, filename?: string): void;
                                                     ^^^^^^ string. See lib: <BUILTINS>/bom.js:329
  Member 3:
  330:     set(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:330
  Error:
   35: a.set('bar', new Blob, 2) // incorrect
                    ^^^^^^^^ Blob. This type is incompatible with the expected param type of
  330:     set(name: string, value: File, filename?: string): void;
                                    ^^^^ File. See lib: <BUILTINS>/bom.js:330

Error: FormData.js:39
 39: a.append('foo', {}); // incorrect
     ^^^^^^^^^^^^^^^^^^^ call of method `append`. Function cannot be called on any member of intersection type
 39: a.append('foo', {}); // incorrect
     ^^^^^^^^ intersection
  Member 1:
  332:     append(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:332
  Error:
   39: a.append('foo', {}); // incorrect
                       ^^ object literal. This type is incompatible with the expected param type of
  332:     append(name: string, value: string): void;
                                       ^^^^^^ string. See lib: <BUILTINS>/bom.js:332
  Member 2:
  333:     append(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:333
  Error:
   39: a.append('foo', {}); // incorrect
                       ^^ object literal. This type is incompatible with the expected param type of
  333:     append(name: string, value: Blob, filename?: string): void;
                                       ^^^^ Blob. See lib: <BUILTINS>/bom.js:333
  Member 3:
  334:     append(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:334
  Error:
   39: a.append('foo', {}); // incorrect
                       ^^ object literal. This type is incompatible with the expected param type of
  334:     append(name: string, value: File, filename?: string): void;
                                       ^^^^ File. See lib: <BUILTINS>/bom.js:334

Error: FormData.js:40
 40: a.append(2, 'bar'); // incorrect
     ^^^^^^^^^^^^^^^^^^ call of method `append`. Function cannot be called on any member of intersection type
 40: a.append(2, 'bar'); // incorrect
     ^^^^^^^^ intersection
  Member 1:
  332:     append(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:332
  Error:
   40: a.append(2, 'bar'); // incorrect
                ^ number. This type is incompatible with the expected param type of
  332:     append(name: string, value: string): void;
                        ^^^^^^ string. See lib: <BUILTINS>/bom.js:332
  Member 2:
  333:     append(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:333
  Error:
   40: a.append(2, 'bar'); // incorrect
                ^ number. This type is incompatible with the expected param type of
  333:     append(name: string, value: Blob, filename?: string): void;
                        ^^^^^^ string. See lib: <BUILTINS>/bom.js:333
  Member 3:
  334:     append(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:334
  Error:
   40: a.append(2, 'bar'); // incorrect
                ^ number. This type is incompatible with the expected param type of
  334:     append(name: string, value: File, filename?: string): void;
                        ^^^^^^ string. See lib: <BUILTINS>/bom.js:334

Error: FormData.js:41
 41: a.append('foo', 'bar', 'baz'); // incorrect
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `append`. Function cannot be called on any member of intersection type
 41: a.append('foo', 'bar', 'baz'); // incorrect
     ^^^^^^^^ intersection
  Member 1:
  332:     append(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:332
  Error:
   41: a.append('foo', 'bar', 'baz'); // incorrect
                              ^^^^^ unused function argument
    332:     append(name: string, value: string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 2 arguments. See lib: <BUILTINS>/bom.js:332
  Member 2:
  333:     append(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:333
  Error:
   41: a.append('foo', 'bar', 'baz'); // incorrect
                       ^^^^^ string. This type is incompatible with the expected param type of
  333:     append(name: string, value: Blob, filename?: string): void;
                                       ^^^^ Blob. See lib: <BUILTINS>/bom.js:333
  Member 3:
  334:     append(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:334
  Error:
   41: a.append('foo', 'bar', 'baz'); // incorrect
                       ^^^^^ string. This type is incompatible with the expected param type of
  334:     append(name: string, value: File, filename?: string): void;
                                       ^^^^ File. See lib: <BUILTINS>/bom.js:334

Error: FormData.js:45
 45: a.append('bar', new File([], 'q'), 2) // incorrect
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `append`. Function cannot be called on any member of intersection type
 45: a.append('bar', new File([], 'q'), 2) // incorrect
     ^^^^^^^^ intersection
  Member 1:
  332:     append(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:332
  Error:
   45: a.append('bar', new File([], 'q'), 2) // incorrect
                       ^^^^^^^^^^^^^^^^^ File. This type is incompatible with the expected param type of
  332:     append(name: string, value: string): void;
                                       ^^^^^^ string. See lib: <BUILTINS>/bom.js:332
  Member 2:
  333:     append(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:333
  Error:
   45: a.append('bar', new File([], 'q'), 2) // incorrect
                                          ^ number. This type is incompatible with the expected param type of
  333:     append(name: string, value: Blob, filename?: string): void;
                                                        ^^^^^^ string. See lib: <BUILTINS>/bom.js:333
  Member 3:
  334:     append(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:334
  Error:
   45: a.append('bar', new File([], 'q'), 2) // incorrect
                                          ^ number. This type is incompatible with the expected param type of
  334:     append(name: string, value: File, filename?: string): void;
                                                        ^^^^^^ string. See lib: <BUILTINS>/bom.js:334

Error: FormData.js:48
 48: a.append('bar', new Blob, 2) // incorrect
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `append`. Function cannot be called on any member of intersection type
 48: a.append('bar', new Blob, 2) // incorrect
     ^^^^^^^^ intersection
  Member 1:
  332:     append(name: string, value: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:332
  Error:
   48: a.append('bar', new Blob, 2) // incorrect
                       ^^^^^^^^ Blob. This type is incompatible with the expected param type of
  332:     append(name: string, value: string): void;
                                       ^^^^^^ string. See lib: <BUILTINS>/bom.js:332
  Member 2:
  333:     append(name: string, value: Blob, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:333
  Error:
   48: a.append('bar', new Blob, 2) // incorrect
                                 ^ number. This type is incompatible with the expected param type of
  333:     append(name: string, value: Blob, filename?: string): void;
                                                        ^^^^^^ string. See lib: <BUILTINS>/bom.js:333
  Member 3:
  334:     append(name: string, value: File, filename?: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:334
  Error:
   48: a.append('bar', new Blob, 2) // incorrect
                       ^^^^^^^^ Blob. This type is incompatible with the expected param type of
  334:     append(name: string, value: File, filename?: string): void;
                                       ^^^^ File. See lib: <BUILTINS>/bom.js:334

Error: FormData.js:52
 52: a.delete(3); // incorrect
              ^ number. This type is incompatible with the expected param type of
336:     delete(name: string): void;
                      ^^^^^^ string. See lib: <BUILTINS>/bom.js:336

Error: FormData.js:56
 56: for (let x: number of a.keys()) {} // incorrect
              ^^^^^^^^^ string. This type is incompatible with
 56: for (let x: number of a.keys()) {} // incorrect
                 ^^^^^^ number

Error: FormData.js:64
 64: for (let [x, y]: [string, string | File | Blob] of a.entries()) {} // incorrect
                                               ^^^^ Blob. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ union: string | File. See lib: <BUILTINS>/bom.js:340
  Member 1:
  319: type FormDataEntryValue = string | File
                                 ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
  Error:
   64: for (let [x, y]: [string, string | File | Blob] of a.entries()) {} // incorrect
                                                 ^^^^ Blob. This type is incompatible with
  319: type FormDataEntryValue = string | File
                                 ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
  Member 2:
  319: type FormDataEntryValue = string | File
                                          ^^^^ File. See lib: <BUILTINS>/bom.js:319
  Error:
   64: for (let [x, y]: [string, string | File | Blob] of a.entries()) {} // incorrect
                                                 ^^^^ Blob. This type is incompatible with
  319: type FormDataEntryValue = string | File
                                          ^^^^ File. See lib: <BUILTINS>/bom.js:319

Error: FormData.js:65
 65: for (let [x, y]: [number, string] of a.entries()) {} // incorrect
               ^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                              ^^^^^^ string. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:65
 65: for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                  ^ string. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ File. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:65
 65: for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                       ^^^^^^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                              ^^^^^^ string. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:65
 65: for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                               ^^^^^^ string. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ File. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:66
 66: for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                  ^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ File. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:66
 66: for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                  ^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ string. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:66
 66: for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                               ^^^^^^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ File. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:66
 66: for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                               ^^^^^^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ string. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:66
 66: for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                               ^^^^^^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ union: string | File. See lib: <BUILTINS>/bom.js:340
  Member 1:
  319: type FormDataEntryValue = string | File
                                 ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
  Error:
   66: for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                 ^^^^^^ number. This type is incompatible with
  319: type FormDataEntryValue = string | File
                                 ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
  Member 2:
  319: type FormDataEntryValue = string | File
                                          ^^^^ File. See lib: <BUILTINS>/bom.js:319
  Error:
   66: for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                 ^^^^^^ number. This type is incompatible with
  319: type FormDataEntryValue = string | File
                                          ^^^^ File. See lib: <BUILTINS>/bom.js:319

Error: FormData.js:67
 67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
               ^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                              ^^^^^^ string. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:67
 67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                  ^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ File. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:67
 67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                  ^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ string. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:67
 67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                       ^^^^^^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                              ^^^^^^ string. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:67
 67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                               ^^^^^^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ File. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:67
 67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                               ^^^^^^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ string. See lib: <BUILTINS>/bom.js:340

Error: FormData.js:67
 67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                               ^^^^^^ number. This type is incompatible with
340:     entries(): Iterator<[string, FormDataEntryValue]>;
                                      ^^^^^^^^^^^^^^^^^^ union: string | File. See lib: <BUILTINS>/bom.js:340
  Member 1:
  319: type FormDataEntryValue = string | File
                                 ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
  Error:
   67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                 ^^^^^^ number. This type is incompatible with
  319: type FormDataEntryValue = string | File
                                 ^^^^^^ string. See lib: <BUILTINS>/bom.js:319
  Member 2:
  319: type FormDataEntryValue = string | File
                                          ^^^^ File. See lib: <BUILTINS>/bom.js:319
  Error:
   67: for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                 ^^^^^^ number. This type is incompatible with
  319: type FormDataEntryValue = string | File
                                          ^^^^ File. See lib: <BUILTINS>/bom.js:319

Error: MutationObserver.js:10
 10: new MutationObserver(); // incorrect
     ^^^^^^^^^^^^^^^^^^^^^^ constructor call
 10: new MutationObserver(); // incorrect
     ^^^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
368:     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => any): void;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:368

Error: MutationObserver.js:11
 11: new MutationObserver(42); // incorrect
                          ^^ number. This type is incompatible with the expected param type of
368:     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => any): void;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:368

Error: MutationObserver.js:12
 12: new MutationObserver((n: number) => {}); // incorrect
                          ^^^^^^^^^^^^^^^^^ function. This type is incompatible with the expected param type of
368:     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => any): void;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/bom.js:368
  This parameter is incompatible:
    368:     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => any): void;
                                         ^^^^^^^^^^^^^^^^^^^^^ array type. This type is incompatible with. See lib: <BUILTINS>/bom.js:368
     12: new MutationObserver((n: number) => {}); // incorrect
                                  ^^^^^^ number

Error: MutationObserver.js:18
 18: o.observe(); // incorrect
     ^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
360: declare type MutationObserverInit = MutationObserverInitRequired & {
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s). See lib: <BUILTINS>/bom.js:360
  Member 1:
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
  Error:
   18: o.observe(); // incorrect
       ^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
  Member 2:
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
  Error:
   18: o.observe(); // incorrect
       ^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
  Member 3:
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358
  Error:
   18: o.observe(); // incorrect
       ^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358

Error: MutationObserver.js:18
 18: o.observe(); // incorrect
     ^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
                                                                        v
360: declare type MutationObserverInit = MutationObserverInitRequired & {
361:     subtree?: boolean;
362:     attributeOldValue?: boolean;
...:
365: }
     ^ object type. See lib: <BUILTINS>/bom.js:360

Error: MutationObserver.js:18
 18: o.observe(); // incorrect
     ^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
369:     observe(target: Node, options: MutationObserverInit): void;
                         ^^^^ Node. See lib: <BUILTINS>/bom.js:369

Error: MutationObserver.js:19
 19: o.observe('invalid'); // incorrect
     ^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
360: declare type MutationObserverInit = MutationObserverInitRequired & {
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s). See lib: <BUILTINS>/bom.js:360
  Member 1:
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
  Error:
   19: o.observe('invalid'); // incorrect
       ^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
  Member 2:
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
  Error:
   19: o.observe('invalid'); // incorrect
       ^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
  Member 3:
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358
  Error:
   19: o.observe('invalid'); // incorrect
       ^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358

Error: MutationObserver.js:19
 19: o.observe('invalid'); // incorrect
     ^^^^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
                                                                        v
360: declare type MutationObserverInit = MutationObserverInitRequired & {
361:     subtree?: boolean;
362:     attributeOldValue?: boolean;
...:
365: }
     ^ object type. See lib: <BUILTINS>/bom.js:360

Error: MutationObserver.js:19
 19: o.observe('invalid'); // incorrect
               ^^^^^^^^^ string. This type is incompatible with the expected param type of
369:     observe(target: Node, options: MutationObserverInit): void;
                         ^^^^ Node. See lib: <BUILTINS>/bom.js:369

Error: MutationObserver.js:20
 20: o.observe(div); // incorrect
     ^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
360: declare type MutationObserverInit = MutationObserverInitRequired & {
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s). See lib: <BUILTINS>/bom.js:360
  Member 1:
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
  Error:
   20: o.observe(div); // incorrect
       ^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
  Member 2:
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
  Error:
   20: o.observe(div); // incorrect
       ^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
  Member 3:
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358
  Error:
   20: o.observe(div); // incorrect
       ^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358

Error: MutationObserver.js:20
 20: o.observe(div); // incorrect
     ^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
                                                                        v
360: declare type MutationObserverInit = MutationObserverInitRequired & {
361:     subtree?: boolean;
362:     attributeOldValue?: boolean;
...:
365: }
     ^ object type. See lib: <BUILTINS>/bom.js:360

Error: MutationObserver.js:21
 21: o.observe(div, {}); // incorrect
                    ^^ object literal. This type is incompatible with the expected param type of
360: declare type MutationObserverInit = MutationObserverInitRequired & {
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s). See lib: <BUILTINS>/bom.js:360
  Member 1:
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
  Error:
   21: o.observe(div, {}); // incorrect
                      ^^ object literal. This type is incompatible with
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
    Property `childList` is incompatible:
      356:     | { childList: true }
                 ^^^^^^^^^^^^^^^^^^^ property `childList`. Property not found in. See lib: <BUILTINS>/bom.js:356
       21: o.observe(div, {}); // incorrect
                          ^^ object literal
  Member 2:
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
  Error:
   21: o.observe(div, {}); // incorrect
                      ^^ object literal. This type is incompatible with
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
    Property `attributes` is incompatible:
      357:     | { attributes: true }
                 ^^^^^^^^^^^^^^^^^^^^ property `attributes`. Property not found in. See lib: <BUILTINS>/bom.js:357
       21: o.observe(div, {}); // incorrect
                          ^^ object literal
  Member 3:
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358
  Error:
   21: o.observe(div, {}); // incorrect
                      ^^ object literal. This type is incompatible with
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358
    Property `characterData` is incompatible:
      358:     | { characterData: true }
                 ^^^^^^^^^^^^^^^^^^^^^^^ property `characterData`. Property not found in. See lib: <BUILTINS>/bom.js:358
       21: o.observe(div, {}); // incorrect
                          ^^ object literal

Error: MutationObserver.js:22
 22: o.observe(div, { subtree: true }); // incorrect
                    ^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
360: declare type MutationObserverInit = MutationObserverInitRequired & {
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s). See lib: <BUILTINS>/bom.js:360
  Member 1:
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
  Error:
   22: o.observe(div, { subtree: true }); // incorrect
                      ^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
  356:     | { childList: true }
             ^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:356
    Property `childList` is incompatible:
      356:     | { childList: true }
                 ^^^^^^^^^^^^^^^^^^^ property `childList`. Property not found in. See lib: <BUILTINS>/bom.js:356
       22: o.observe(div, { subtree: true }); // incorrect
                          ^^^^^^^^^^^^^^^^^ object literal
  Member 2:
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
  Error:
   22: o.observe(div, { subtree: true }); // incorrect
                      ^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
  357:     | { attributes: true }
             ^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:357
    Property `attributes` is incompatible:
      357:     | { attributes: true }
                 ^^^^^^^^^^^^^^^^^^^^ property `attributes`. Property not found in. See lib: <BUILTINS>/bom.js:357
       22: o.observe(div, { subtree: true }); // incorrect
                          ^^^^^^^^^^^^^^^^^ object literal
  Member 3:
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358
  Error:
   22: o.observe(div, { subtree: true }); // incorrect
                      ^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
  358:     | { characterData: true }
             ^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/bom.js:358
    Property `characterData` is incompatible:
      358:     | { characterData: true }
                 ^^^^^^^^^^^^^^^^^^^^^^^ property `characterData`. Property not found in. See lib: <BUILTINS>/bom.js:358
       22: o.observe(div, { subtree: true }); // incorrect
                          ^^^^^^^^^^^^^^^^^ object literal

Error: MutationObserver.js:23
 23: o.observe(div, { attributes: true, attributeFilter: true }); // incorrect
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with the expected param type of
                                                                        v
360: declare type MutationObserverInit = MutationObserverInitRequired & {
361:     subtree?: boolean;
362:     attributeOldValue?: boolean;
...:
365: }
     ^ object type. See lib: <BUILTINS>/bom.js:360
  Property `attributeFilter` is incompatible:
     23: o.observe(div, { attributes: true, attributeFilter: true }); // incorrect
                                                             ^^^^ boolean. This type is incompatible with
    364:     attributeFilter?: Array<string>;
                               ^^^^^^^^^^^^^ array type. See lib: <BUILTINS>/bom.js:364


Found 55 errors
